--- a/requirements.txt
+++ b/requirements.txt
@@ -13,12 +13,16 @@ django-cors-headers==4.3.1
 django-restframework==0.0.1
 djangorestframework==3.15.1
 drf-yasg==1.21.7
+et-xmlfile==1.1.0
 html5lib==1.1
 idna==3.7
 inflection==0.5.1
 lxml==5.2.1
+numpy==2.1.1
+openpyxl==3.1.5
 oscrypto==1.3.0
 packaging==24.0
+pandas==2.2.2
 pdf2image==1.17.0
 pdfkit==1.0.0
 pillow==10.3.0
@@ -28,16 +32,19 @@ pyhanko-certvalidator==0.26.3
 pypdf==4.2.0
 pypng==0.20220715.0
 python-bidi==0.4.2
+python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
 qrcode==7.4.2
 reportlab==4.0.9
 requests==2.31.0
+setuptools==71.1.0
 six==1.16.0
 sqlparse==0.5.0
 svglib==1.5.1
 tinycss2==1.3.0
 typing_extensions==4.11.0
+tzdata==2024.1
 tzlocal==5.2
 uritemplate==4.1.1
 uritools==4.0.2
